--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ paginate: 10
 category_dir: topics
 category_title_prefix: 
 exclude: ["lib", "public", "Capfile", "config", "log", "Rakefile", "tmp", ".gitignore", ".git"]
-destination: ..\coapp.github.com
+destination: ..\website
