added case-insensitive flag to iirf redirects

--- a/iirf.ini
+++ b/iirf.ini
@@ -3,12 +3,12 @@
 StatusInquiry ON
 
 #canonical CoApp urls
-RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml
-RewriteRule ^/feed$ /repository/packages.xml
-RewriteRule ^/install$ /repository/coapp.toolkit.msi
-RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt
+RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
+RewriteRule ^/feed$ /repository/packages.xml [I]
+RewriteRule ^/install$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
 
 #offload stuff to blob server and CDN
-RedirectRule ^/repository/(.*)$  http://coapppackages.blob.core.windows.net/repository/$1  [R=302]
-RedirectRule ^/cdn/(.*)$  "http://repository.coapp.org/repository/$1  [R=302]
-RedirectRule ^/snapshots?/(.*)$  "http://coapppackages.blob.core.windows.net/snapshots/$1  [R=302]
+RedirectRule ^/repository/(.*)$  http://coapppackages.blob.core.windows.net/repository/$1  [I,R=302]
+RedirectRule ^/cdn/(.*)$  "http://repository.coapp.org/repository/$1  [I,R=302]
+RedirectRule ^/snapshots?/(.*)$  "http://coapppackages.blob.core.windows.net/snapshots/$1  [I,R=302]
