--- a/iirf.ini
+++ b/iirf.ini
@@ -1,5 +1,4 @@
 # Redirect rules using IIRF for CoApp.org site.
-
 StatusInquiry ON
 
 #canonical CoApp urls
@@ -12,3 +11,6 @@ RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I
 RedirectRule ^/repository/(.*)$  http://coapppackages.blob.core.windows.net/repository/$1  [I,R=302]
 RedirectRule ^/cdn/(.*)$  "http://repository.coapp.org/repository/$1  [I,R=302]
 RedirectRule ^/snapshots?/(.*)$  "http://coapppackages.blob.core.windows.net/snapshots/$1  [I,R=302]
+
+#developer stuff.
+RedirectRule ^/coapp-src.cmd$ https://github.com/coapp/checkout/raw/master/coapp-src.cmd [I,R=302]
