--- a/iirf.ini
+++ b/iirf.ini
@@ -5,8 +5,7 @@ StatusInquiry ON
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
 RewriteRule ^/feed$ /repository/packages.xml [I]
 RewriteRule ^/install$ /repository/coapp.toolkit.msi [I]
-RewriteRule ^/(repository/)?bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
-#RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
+RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
 
 #offload stuff to blob server and CDN
 RedirectRule ^/repository/(.*)$  http://coapppackages.blob.core.windows.net/repository/$1  [I,R=302]
