--- a/iirf.ini
+++ b/iirf.ini
@@ -9,7 +9,7 @@ RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I
 
 #offload stuff to blob server and CDN
 RedirectRule ^/repository/(.*)$  http://coapppackages.blob.core.windows.net/repository/$1  [I,R=302]
-RedirectRule ^/cdn/(.*)$  "http://repository.coapp.org/repository/$1  [I,R=302]
+RedirectRule ^/cdn/(.*)$  http://repository.coapp.org/repository/$1  [I,R=302]
 RedirectRule ^/snapshots?/(.*)$  "http://coapppackages.blob.core.windows.net/snapshots/$1  [I,R=302]
 
 #developer stuff.
