--- a/iirf.ini
+++ b/iirf.ini
@@ -5,12 +5,12 @@ StatusInquiry ON
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
 RewriteRule ^/feed$ /repository/packages.xml [I]
 RewriteRule ^/install$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/devtools$ /repository/coapp.devtools.msi [I]
 RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
 
 #offload stuff to blob server and CDN
 RedirectRule ^/repository/(.*)$  http://coapppackages.blob.core.windows.net/repository/$1  [I,R=302]
 RedirectRule ^/cdn/(.*)$  http://repository.coapp.org/repository/$1  [I,R=302]
-RedirectRule ^/snapshots?/(.*)$  "http://coapppackages.blob.core.windows.net/snapshots/$1  [I,R=302]
 
 #developer stuff.
 RedirectRule ^/coapp-src.cmd$ https://github.com/coapp/checkout/raw/master/coapp-src.cmd [I,R=302]
