--- a/iirf.ini
+++ b/iirf.ini
@@ -9,9 +9,9 @@ RewriteRule ^/devtools$ /resources/coapp.devtools.msi [I]
 # RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
 
 #offload stuff to blob server and CDN
-RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/$1  [I,R=302]
-RedirectRule ^/repository/(.*)$  http://downloads.coapp.org/repository/$1  [I,R=302]
-RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/$1  [I,R=302]
+RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
+RedirectRule ^/repository/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
+RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
 
 #developer stuff.
 RedirectRule ^/coapp-src.cmd$ https://github.com/coapp/checkout/raw/master/coapp-src.cmd [I,R=302]
