--- a/iirf.ini
+++ b/iirf.ini
@@ -2,14 +2,16 @@
 StatusInquiry ON
 
 #canonical CoApp urls
-RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
 RewriteRule ^/feed$ /repository/packages.xml [I]
+RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
+
+#canonical locations for our packages. 
 RewriteRule ^/install$ /resources/coapp.toolkit.msi [I]
 RewriteRule ^/devtools$ /resources/coapp.devtools.msi [I]
-# RewriteRule ^/bootstrap(manifest)?(\.txt)?$ /repository/bootstrapmanifest.txt [I]
 
 #offload stuff to blob server and CDN
 RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
+RedirectRule ^/packages/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/repository/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
 
