--- a/iirf.ini
+++ b/iirf.ini
@@ -17,3 +17,4 @@ RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
 
 #developer stuff.
 RedirectRule ^/coapp-src.cmd$ https://github.com/coapp/checkout/raw/master/coapp-src.cmd [I,R=302]
+RedirectRule ^/wipe-coapp.cmd$ https://coapp.blob.core.windows.net/resources/wipe-coapp.cmd [I,R=302]
