--- a/iirf.ini
+++ b/iirf.ini
@@ -3,11 +3,14 @@ StatusInquiry ON
 
 #canonical CoApp urls
 RewriteRule ^/feed$ /repository/packages.xml [I]
+RewriteRule ^/feed/$ /repository/packages.xml [I]
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
 
 #canonical locations for our packages. 
 RewriteRule ^/install$ /resources/coapp.toolkit.msi [I]
 RewriteRule ^/devtools$ /resources/coapp.devtools.msi [I]
+RewriteRule ^/install/$ /resources/coapp.toolkit.msi [I]
+RewriteRule ^/devtools/$ /resources/coapp.devtools.msi [I]
 
 #offload stuff to blob server and CDN
 RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
