added /cleaner to coapp

--- a/iirf.ini
+++ b/iirf.ini
@@ -11,10 +11,12 @@ RewriteRule ^/install$ /resources/coapp.toolkit.msi [I]
 RewriteRule ^/devtools$ /resources/coapp.devtools.msi [I]
 RewriteRule ^/install/$ /resources/coapp.toolkit.msi [I]
 RewriteRule ^/devtools/$ /resources/coapp.devtools.msi [I]
-RewriteRule ^/cleaner/$ /resources/coapp.cleaner.exe[I]
-RewriteRule ^/coapp.cleaner/$ /resources/coapp.cleaner.exe[I]
-RewriteRule ^/coapp.cleaner.zip/$ /resources/coapp.cleaner.zip[I]
-RewriteRule ^/coapp.cleaner.exe/$ /resources/coapp.cleaner.zip[I]
+RewriteRule ^/cleaner/$ /resources/coapp.cleaner.exe [I]
+RewriteRule ^/coapp.cleaner/$ /resources/coapp.cleaner.exe [I]
+RewriteRule ^/cleaner$ /resources/coapp.cleaner.exe [I]
+RewriteRule ^/coapp.cleaner$ /resources/coapp.cleaner.exe [I]
+RewriteRule ^/coapp.cleaner.zip$ /resources/coapp.cleaner.zip [I]
+RewriteRule ^/coapp.cleaner.exe$ /resources/coapp.cleaner.zip [I]
 
 #offload stuff to blob server and CDN
 RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
