garrett-markdown images now lookup full url from filename (similar to reference ids) and videos can pull from cdn

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -23,3 +23,4 @@ RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/#L$1#E  [I,
 RedirectRule ^/packages/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/repository/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
+RedirectRule ^/videos/(.*)$  http://cdn.coapp.org/resources/#L$1#E  [I,R=302]
