fixed bug in header

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -1,6 +1,9 @@
 # Redirect rules using IIRF for CoApp.org site.
 StatusInquiry ON
 
+RewriteLog c:\tools\logs\iirf
+RewriteLogLevel 2
+
 #canonical CoApp urls
 RewriteRule ^/feed$ /repository/packages.xml [I]
 RewriteRule ^/feed/$ /repository/packages.xml [I]
