added feed proxy :(

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -27,3 +27,5 @@ RedirectRule ^/packages/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,
 RedirectRule ^/repository/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/videos/(.*)$  http://cdn.coapp.org/resources/#L$1#E  [I,R=302]
+
+ProxyPass ^/proxy/(.*)$  http://downloads.coapp.org/repository/#L$1#E 
