--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -10,13 +10,15 @@ RewriteRule ^/feed/$ /repository/packages.xml [I]
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
 
 #canonical locations for our packages. 
-RewriteRule ^/install$ /resources/coapp.toolkit.msi [I]
-RewriteRule ^/devtools$ /resources/coapp.devtools.msi [I]
-RewriteRule ^/install/$ /resources/coapp.toolkit.msi [I]
-RewriteRule ^/devtools/$ /resources/coapp.devtools.msi [I]
+RewriteRule ^/install$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/devtools$ /repository/coapp.devtools.msi [I]
+RewriteRule ^/install/$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/devtools/$ /repository/coapp.devtools.msi [I]
+
+#canonical locations for certain resources
 RewriteRule ^/cleaner/$ /resources/coapp.cleaner.exe [I]
-RewriteRule ^/coapp.cleaner/$ /resources/coapp.cleaner.exe [I]
 RewriteRule ^/cleaner$ /resources/coapp.cleaner.exe [I]
+RewriteRule ^/coapp.cleaner/$ /resources/coapp.cleaner.exe [I]
 RewriteRule ^/coapp.cleaner$ /resources/coapp.cleaner.exe [I]
 RewriteRule ^/coapp.cleaner.zip$ /resources/coapp.cleaner.zip [I]
 RewriteRule ^/coapp.cleaner.exe$ /resources/coapp.cleaner.zip [I]
