modified iirf to redirect smartly :)

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -2,7 +2,13 @@
 StatusInquiry ON
 
 RewriteLog c:\tools\logs\iirf
-RewriteLogLevel 2
+RewriteLogLevel 5
+CondSubstringBackrefFlag %
+
+
+# make sure triggers are working even without the trailing slash
+RewriteRule ^/upload$ /upload/ [I]
+RewriteRule ^/trigger$ /trigger/ [I]
 
 #canonical CoApp urls
 RewriteRule ^/feed$ /repository/packages.xml [I]
@@ -24,10 +30,43 @@ RewriteRule ^/coapp.cleaner.zip$ /resources/coapp.cleaner.zip [I]
 RewriteRule ^/coapp.cleaner.exe$ /resources/coapp.cleaner.zip [I]
 
 #offload stuff to blob server and CDN
-RedirectRule ^/resources/(.*)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
-RedirectRule ^/packages/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
-RedirectRule ^/repository/(.*)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
-RedirectRule ^/cdn/(.*)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
-RedirectRule ^/videos/(.*)$  http://cdn.coapp.org/resources/#L$1#E  [I,R=302]
+RedirectRule ^/resources/(.+)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
+RedirectRule ^/packages/(.+)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
+RedirectRule ^/repository/(.+)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
+RedirectRule ^/cdn/(.+)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
+RedirectRule ^/videos/(.+)$  http://cdn.coapp.org/resources/#L$1#E  [I,R=302]
 
 ProxyPass ^/proxy/(.*)$  http://downloads.coapp.org/repository/#L$1#E 
+
+# Checks for local file existence so that .css, .js and other  static
+# files aren't rewritten
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^/.*$          -     [L]
+
+# /pages rewrites /foo to /pages/foo.html if it exists
+RewriteCond %{REQUEST_FILENAME}  ^(.*)\\(.*)$ 
+RewriteCond %1\\pages\\%2.html  -f [I]
+RedirectRule ^/([^/]*)$ /pages/$1.html
+
+# /pages rewrites /foo/ to /pages/foo.html if it exists
+RewriteCond %{REQUEST_FILENAME}  ^(.*)\\(.*)\\$ 
+RewriteCond %1\\pages\\%2.html  -f [I]
+RedirectRule ^/([^/]*)/$ /pages/$1.html
+
+# /pages rewrites /foo to /help/foo.html if it exists
+RewriteCond %{REQUEST_FILENAME}  ^(.*)\\(.*)$ 
+RewriteCond %1\\help\\%2.html  -f [I]
+RedirectRule ^/([^/]*)$ /help/$1.html
+
+# /pages rewrites /foo/ to /help/foo.html if it exists
+RewriteCond %{REQUEST_FILENAME}  ^(.*)\\(.*)\\$ 
+RewriteCond %1\\help\\%2.html  -f [I]
+RedirectRule ^/([^/]*)/$ /help/$1.html
+
+# /pages rewrites /help/foo to /help/foo.html if it exists
+RewriteCond %{REQUEST_FILENAME}  ^(.*)\\(.*)$ 
+RewriteCond %1\\%2.html  -f [I]
+RedirectRule ^/(.*)$ /$1.html
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RedirectRule ^(.*)$ /not-found.html#page=$1   [L]
