--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -1,6 +1,8 @@
 # Redirect rules using IIRF for CoApp.org site.
 StatusInquiry ON
 
+RewriteFilterPriority HIGH
+
 RewriteLog c:\tools\logs\iirf
 RewriteLogLevel 5
 CondSubstringBackrefFlag %
@@ -70,3 +72,4 @@ RedirectRule ^/(.*)$ /$1.html
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RedirectRule ^(.*)$ /not-found.html#page=$1   [L]
+
