--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -70,6 +70,9 @@ RewriteCond %{REQUEST_FILENAME}  ^(.*)\\(.*)$
 RewriteCond %1\\%2.html  -f [I]
 RedirectRule ^/(.*)$ /$1.html
 
+RewriteCond 
+RedirectRule ^/$ /index.html
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RedirectRule ^(.*)$ /not-found.html#page=$1   [L]
 
