added github links

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -7,6 +7,7 @@ RewriteLog c:\tools\logs\iirf
 RewriteLogLevel 5
 CondSubstringBackrefFlag %
 
+RedirectRule ^/github$ https://github.com/organizations/coapp [I]
 
 # make sure triggers are working even without the trailing slash
 RewriteRule ^/upload$ /upload/ [I]
