updated canonical links

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -18,6 +18,10 @@ RewriteRule ^/feed$ /repository/packages.xml [I]
 RewriteRule ^/feed/$ /repository/packages.xml [I]
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
 
+# fix msis in resources to get from repository.
+RewriteRule ^/resources/coapp.toolkit.msi$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/resources/coapp.devtools.msi$ /repository/coapp.toolkit.msi [I]
+
 #canonical locations for our packages. 
 RewriteRule ^/install$ /repository/coapp.toolkit.msi [I]
 RewriteRule ^/devtools$ /repository/coapp.devtools.msi [I]
