--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -38,13 +38,17 @@ RewriteRule ^/coapp.cleaner$ /resources/coapp.cleaner.exe [I]
 RewriteRule ^/coapp.cleaner.zip$ /resources/coapp.cleaner.zip [I]
 RewriteRule ^/coapp.cleaner.exe$ /resources/coapp.cleaner.zip [I]
 
-#offload stuff to blob server and CDN
+#offload stuff to blob server 
 RedirectRule ^/resources/(.+)$  http://downloads.coapp.org/resources/#L$1#E  [I,R=302]
-RedirectRule ^/packages/(.+)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
 RedirectRule ^/repository/(.+)$  http://downloads.coapp.org/repository/#L$1#E  [I,R=302]
-RedirectRule ^/cdn/(.+)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
-RedirectRule ^/videos/(.+)$  http://cdn.coapp.org/resources/#L$1#E  [I,R=302]
 
+# 'packages' and 'videos' go via the CDN
+RedirectRule ^/packages/(.+)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
+
+RedirectRule ^/cdn/(.+)$  http://cdn.coapp.org/repository/#L$1#E  [I,R=302]
+RedirectRule ^/videos/(.+)$  http://cdn.coapp.org/videos/#L$1#E  [I,R=302]
+
+# use /proxy/ to download via the coapp webserver.
 ProxyPass ^/proxy/(.*)$  http://downloads.coapp.org/repository/#L$1#E 
 
 # Checks for local file existence so that .css, .js and other  static
