made package feed unlimited length

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -11,6 +11,7 @@ CondSubstringBackrefFlag %
 RewriteRule ^/resources/coapp.toolkit.msi$ /repository/coapp.toolkit.msi [I]
 RewriteRule ^/resources/coapp.devtools.msi$ /repository/coapp.toolkit.msi [I]
 
+RewriteRule ^/startup/.*$ /index.html [I]
 
 RedirectRule ^/github$ https://github.com/organizations/coapp [I]
 
