updated iirf settings for new reposerver

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -3,32 +3,46 @@ StatusInquiry ON
 
 RewriteFilterPriority HIGH
 
-RewriteLog c:\tools\logs\iirf
+# RewriteLog c:\tools\logs\iirf
 RewriteLogLevel 0
 CondSubstringBackrefFlag %
 
 # fix msis in resources to get from repository.
-RewriteRule ^/resources/coapp.toolkit.msi$ /repository/coapp.toolkit.msi [I]
-RewriteRule ^/resources/coapp.devtools.msi$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/resources/coapp.msi$ /repository/coapp.msi [I]
+RewriteRule ^/resources/coapp.devtools.msi$ /repository/coapp.msi [I]
 
 RewriteRule ^/startup/.*$ /index.html [I]
 
 RedirectRule ^/github$ https://github.com/organizations/coapp [I]
 
 # make sure triggers are working even without the trailing slash
-RewriteRule ^/upload$ /upload/ [I]
 RewriteRule ^/trigger$ /trigger/ [I]
 
+# upload handlers
+RewriteRule ^/upload$ /upload/current/ [I]
+RewriteRule ^/upload/$ /upload/current/ [I]
+RewriteRule ^/upload/current$ /upload/current/ [I]
+RewriteRule ^/upload/archive$ /upload/archive/ [I]
+RewriteRule ^/upload/unstable$ /upload/unstable/ [I]
+
 #canonical CoApp urls
-RewriteRule ^/feed$ /repository/packages.xml [I]
-RewriteRule ^/feed/$ /repository/packages.xml [I]
-RewriteRule ^/packages?(\.atom)?\.xml$ /repository/packages.xml [I]
+RewriteRule ^/feed$ /repository/current.xml [I]
+RewriteRule ^/feed/$ /repository/current.xml [I]
+RewriteRule ^/packages?(\.atom)?\.xml$ /repository/current.xml [I]
+
+RewriteRule ^/current$ /repository/current.xml [I]
+RewriteRule ^/current/$ /repository/current.xml [I]
+RewriteRule ^/archive$ /repository/archive.xml [I]
+RewriteRule ^/archive/$ /repository/archive.xml [I]
+
+RewriteRule ^/unstable$ /repository/unstable.xml [I]
+RewriteRule ^/unstable/$ /repository/unstable.xml [I]
 
 
 #canonical locations for our packages. 
-RewriteRule ^/install$ /repository/coapp.toolkit.msi [I]
+RewriteRule ^/install$ /repository/coapp.msi [I]
+RewriteRule ^/install/$ /repository/coapp.msi [I]
 RewriteRule ^/devtools$ /repository/coapp.devtools.msi [I]
-RewriteRule ^/install/$ /repository/coapp.toolkit.msi [I]
 RewriteRule ^/devtools/$ /repository/coapp.devtools.msi [I]
 
 #canonical locations for certain resources
