--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -30,6 +30,9 @@ RewriteRule ^/feed$ /repository/current.xml [I]
 RewriteRule ^/feed/$ /repository/current.xml [I]
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/current.xml [I]
 
+RewriteRule ^/proxy/feed$ /proxy/current.xml [I]
+RewriteRule ^/proxy/packages.xml$ /proxy/current.xml [I]
+
 RewriteRule ^/current$ /repository/current.xml [I]
 RewriteRule ^/current/$ /repository/current.xml [I]
 RewriteRule ^/archive$ /repository/archive.xml [I]
