changed /github redirect to non-private url

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -13,7 +13,7 @@ RewriteRule ^/resources/coapp.devtools.msi$ /repository/coapp.msi [I]
 
 RewriteRule ^/startup/.*$ /index.html [I]
 
-RedirectRule ^/github$ https://github.com/organizations/coapp [I]
+RedirectRule ^/github$ https://github.com/coapp [I]
 
 # make sure triggers are working even without the trailing slash
 RewriteRule ^/trigger$ /trigger/ [I]
