--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -16,7 +16,7 @@ RewriteRule ^/startup/.*$ /index.html [I]
 RedirectRule ^/github$ https://github.com/coapp [I]
 
 # make sure triggers are working even without the trailing slash
-RewriteRule ^/trigger$ /trigger/ [I]
+RewriteRule ^/trigger$ /actions/commit.ashx [I]
 
 # upload handlers
 RewriteRule ^/upload$ /upload/current/ [I]
