--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -17,6 +17,7 @@ RedirectRule ^/github$ https://github.com/coapp [I]
 
 # make sure triggers are working even without the trailing slash
 RewriteRule ^/trigger$ /actions/commit.ashx [I]
+RewriteRule ^/trigger/$ /actions/commit.ashx [I]
 
 # upload handlers
 RewriteRule ^/upload$ /upload/current/ [I]
