testing out the hook

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -26,6 +26,8 @@ RewriteRule ^/upload/current$ /upload/current/ [I]
 RewriteRule ^/upload/archive$ /upload/archive/ [I]
 RewriteRule ^/upload/unstable$ /upload/unstable/ [I]
 
+# new upload hooks
+
 #canonical CoApp urls
 RewriteRule ^/feed$ /repository/current.xml [I]
 RewriteRule ^/feed/$ /repository/current.xml [I]
