moving the upload urls

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -20,13 +20,18 @@ RewriteRule ^/trigger$ /actions/commit.ashx [I]
 RewriteRule ^/trigger/$ /actions/commit.ashx [I]
 
 # upload handlers
-RewriteRule ^/upload$ /upload/current/ [I]
-RewriteRule ^/upload/$ /upload/current/ [I]
-RewriteRule ^/upload/current$ /upload/current/ [I]
-RewriteRule ^/upload/archive$ /upload/archive/ [I]
-RewriteRule ^/upload/unstable$ /upload/unstable/ [I]
+RewriteRule ^/upload/$ /feeds/current.ashx [I]
+RewriteRule ^/upload$ /feeds/current.ashx [I]
 
-# new upload hooks
+RewriteRule ^/upload/current$ /feeds/current.ashx [I]
+RewriteRule ^/upload/current/$ /feeds/current.ashx [I]
+
+RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I]
+RewriteRule ^/upload/archive/$ /feeds/archive.ashx  [I]
+
+RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I]
+RewriteRule ^/upload/unstable/$ /feeds/prerelease.ashx  [I]
+
 
 #canonical CoApp urls
 RewriteRule ^/feed$ /repository/current.xml [I]
