fixing the upload urls

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -24,13 +24,13 @@ RewriteRule ^/upload/$ /feeds/current.ashx [I]
 RewriteRule ^/upload$ /feeds/current.ashx [I]
 
 RewriteRule ^/upload/current$ /feeds/current.ashx [I]
-RewriteRule ^/upload/current/$ /feeds/current.ashx [I]
+RewriteRule ^/upload/current/.*$ /feeds/current.ashx [I]
 
 RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I]
-RewriteRule ^/upload/archive/$ /feeds/archive.ashx  [I]
+RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I]
 
 RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I]
-RewriteRule ^/upload/unstable/$ /feeds/prerelease.ashx  [I]
+RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I]
 
 
 #canonical CoApp urls
