tweaking iirf ini

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -20,22 +20,25 @@ RewriteRule ^/trigger$ /actions/commit.ashx [I]
 RewriteRule ^/trigger/$ /actions/commit.ashx [I]
 
 # upload handlers
-RewriteRule ^/upload/$ /feeds/current.ashx [I]
-RewriteRule ^/upload$ /feeds/current.ashx [I]
 
-RewriteRule ^/upload/current$ /feeds/current.ashx [I]
-RewriteRule ^/upload/current/.*$ /feeds/current.ashx [I]
+RedirectRule ^/upload/current$ http://coapp.org/feeds/current.ashx [I]
+RedirectRule ^/upload/current/.*$ http://coapp.org/feeds/current.ashx [I]
 
-RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I]
-RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I]
+RedirectRule ^/upload/archive$ http://coapp.org/feeds/archive.ashx  [I]
+RedirectRule ^/upload/archive/.*$ http://coapp.org/feeds/archive.ashx  [I]
 
-RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I]
-RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I]
+RedirectRule ^/upload/unstable$ http://coapp.org/feeds/prerelease.ashx  [I]
+RedirectRule ^/upload/unstable/.*$ http://coapp.org/feeds/prerelease.ashx  [I]
+
+# RedirectRule ^/upload/$ http://coapp.org/feeds/current.ashx [I]
+RedirectRule ^/upload.*$ http://coapp.org/feeds/current.ashx [I]
+
 
 #canonical CoApp urls
 RewriteRule ^/feed$ /repository/current.xml [I]
 RewriteRule ^/feed/$ /repository/current.xml [I]
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/current.xml [I]
+RewriteRule ^/packages?(\.feed)?\.xml$ /repository/current.xml [I]
 
 RewriteRule ^/proxy/feed$ /proxy/current.xml [I]
 RewriteRule ^/proxy/packages.xml$ /proxy/current.xml [I]
