--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -21,17 +21,17 @@ RewriteRule ^/trigger/$ /actions/commit.ashx [I]
 
 # upload handlers
 
-RedirectRule ^/upload/current$ http://coapp.org/feeds/current.ashx [I]
-RedirectRule ^/upload/current/.*$ http://coapp.org/feeds/current.ashx [I]
+RewriteRule ^/upload/current$ /feeds/current.ashx [I]
+RewriteRule ^/upload/current/.*$ /feeds/current.ashx [I]
 
-RedirectRule ^/upload/archive$ http://coapp.org/feeds/archive.ashx  [I]
-RedirectRule ^/upload/archive/.*$ http://coapp.org/feeds/archive.ashx  [I]
+RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I]
+RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I]
 
-RedirectRule ^/upload/unstable$ http://coapp.org/feeds/prerelease.ashx  [I]
-RedirectRule ^/upload/unstable/.*$ http://coapp.org/feeds/prerelease.ashx  [I]
+RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I]
+RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I]
 
-# RedirectRule ^/upload/$ http://coapp.org/feeds/current.ashx [I]
-RedirectRule ^/upload.*$ http://coapp.org/feeds/current.ashx [I]
+# RedirectRule ^/upload/$ /feeds/current.ashx [I]
+RewriteRule ^/upload.*$ /feeds/current.ashx [I]
 
 
 #canonical CoApp urls
