tweaking iirf ini

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -21,8 +21,8 @@ RewriteRule ^/trigger/$ /actions/commit.ashx [I]
 
 # upload handlers
 
-RewriteRule ^/upload/current$ /feeds/current.ashx [I]
-RewriteRule ^/upload/current/.*$ /feeds/current.ashx [I]
+RewriteRule ^/upload/current$ /feeds/Current.ashx [I]
+RewriteRule ^/upload/current/.*$ /feeds/Current.ashx [I]
 
 RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I]
 RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I]
@@ -30,8 +30,8 @@ RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I]
 RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I]
 RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I]
 
-# RedirectRule ^/upload/$ /feeds/current.ashx [I]
-RewriteRule ^/upload.*$ /feeds/current.ashx [I]
+# RedirectRule ^/upload/$ /feeds/Current.ashx [I]
+RewriteRule ^/upload.*$ /feeds/Current.ashx [I]
 
 
 #canonical CoApp urls
