tweaking iirf ini

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -21,17 +21,17 @@ RewriteRule ^/trigger/$ /actions/commit.ashx [I]
 
 # upload handlers
 
-RewriteRule ^/upload/current$ /feeds/Current.ashx [IL]
-RewriteRule ^/upload/current/.*$ /feeds/Current.ashx [IL]
+RewriteRule ^/upload/current$ /feeds/Current.ashx [I,L]
+RewriteRule ^/upload/current/.*$ /feeds/Current.ashx [I,L]
 
-RewriteRule ^/upload/archive$ /feeds/archive.ashx  [IL]
-RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [IL]
+RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I,L]
+RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I,L]
 
-RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [IL]
-RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [IL]
+RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I,L]
+RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I,L]
 
-# RedirectRule ^/upload/$ /feeds/Current.ashx [IL]
-RewriteRule ^/upload.*$ /feeds/Current.ashx [IL]
+# RedirectRule ^/upload/$ /feeds/Current.ashx [I,L]
+RewriteRule ^/upload.*$ /feeds/Current.ashx [I,L]
 
 
 #canonical CoApp urls
