tweaking debug, telemetry and commit triggers

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -16,11 +16,17 @@ RewriteRule ^/startup/.*$ /index.html [I]
 RedirectRule ^/github$ https://github.com/coapp [I]
 
 # make sure triggers are working even without the trailing slash
-RewriteRule ^/trigger$ /actions/commit.ashx [I]
-RewriteRule ^/trigger/$ /actions/commit.ashx [I]
+RewriteRule ^/trigger$ /actions/commit.ashx [I,L]
+RewriteRule ^/trigger/$ /actions/commit.ashx [I,L]
+
+RewriteRule ^/telemetry/$ /actions/Telemetry.ashx [I,L]
+RewriteRule ^/telemetry.*$ /actions/Telemetry.ashx [I,L]
+
+RewriteRule ^/debug/$ /actions/Problem.ashx [I,L]
+RewriteRule ^/debug.*$ /actions/Problem.ashx [I,L]
+
 
 # upload handlers
-
 RewriteRule ^/upload/current$ /feeds/Current.ashx [I,L]
 RewriteRule ^/upload/current/.*$ /feeds/Current.ashx [I,L]
 
