fixed telemetry again

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -16,28 +16,28 @@ RewriteRule ^/startup/.*$ /index.html [I]
 RedirectRule ^/github$ https://github.com/coapp [I]
 
 # make sure triggers are working even without the trailing slash
-RewriteRule ^/trigger$ /actions/commit.ashx [I,L]
-RewriteRule ^/trigger/$ /actions/commit.ashx [I,L]
+RewriteRule ^/trigger$ /actions/commit.ashx [I,L,QSA]
+RewriteRule ^/trigger/$ /actions/commit.ashx [I,L,QSA]
 
-RewriteRule ^/telemetry/$ /actions/Telemetry.ashx [I,L]
-RewriteRule ^/telemetry.*$ /actions/Telemetry.ashx [I,L]
+RewriteRule ^/telemetry/$ /actions/Telemetry.ashx [I,L,QSA]
+RewriteRule ^/telemetry.*$ /actions/Telemetry.ashx [I,L,QSA]
 
-RewriteRule ^/debug/$ /actions/Problem.ashx [I,L]
-RewriteRule ^/debug.*$ /actions/Problem.ashx [I,L]
+RewriteRule ^/debug/$ /actions/Problem.ashx [I,L,QSA]
+RewriteRule ^/debug.*$ /actions/Problem.ashx [I,L,QSA]
 
 
 # upload handlers
-RewriteRule ^/upload/current$ /feeds/Current.ashx [I,L]
-RewriteRule ^/upload/current/.*$ /feeds/Current.ashx [I,L]
+RewriteRule ^/upload/current$ /feeds/Current.ashx [I,L,QSA]
+RewriteRule ^/upload/current/.*$ /feeds/Current.ashx [I,L,QSA]
 
-RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I,L]
-RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I,L]
+RewriteRule ^/upload/archive$ /feeds/archive.ashx  [I,L,QSA]
+RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I,L,QSA]
 
-RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I,L]
-RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I,L]
+RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I,L,QSA]
+RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I,L,QSA]
 
-# RedirectRule ^/upload/$ /feeds/Current.ashx [I,L]
-RewriteRule ^/upload.*$ /feeds/Current.ashx [I,L]
+# RedirectRule ^/upload/$ /feeds/Current.ashx [I,L,QSA]
+RewriteRule ^/upload.*$ /feeds/Current.ashx [I,L,QSA]
 
 
 #canonical CoApp urls
