added webpi support

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -39,8 +39,10 @@ RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I,L,QSA]
 # RedirectRule ^/upload/$ /feeds/Current.ashx [I,L,QSA]
 RewriteRule ^/upload.*$ /feeds/Current.ashx [I,L,QSA]
 
-
 #canonical CoApp urls
+RewriteRule ^/webpi$ /proxy/webpi.current.xml [I]
+RewriteRule ^/webpi/$ /proxy/webpi.current.xml [I]
+
 RewriteRule ^/feed$ /repository/current.xml [I]
 RewriteRule ^/feed/$ /repository/current.xml [I]
 RewriteRule ^/packages?(\.atom)?\.xml$ /repository/current.xml [I]
