fixed link for prerelease feed

--- a/src/static/iirf.ini
+++ b/src/static/iirf.ini
@@ -36,6 +36,9 @@ RewriteRule ^/upload/archive/.*$ /feeds/archive.ashx  [I,L,QSA]
 RewriteRule ^/upload/unstable$ /feeds/prerelease.ashx  [I,L,QSA]
 RewriteRule ^/upload/unstable/.*$ /feeds/prerelease.ashx  [I,L,QSA]
 
+RewriteRule ^/upload/prerelease$ /feeds/prerelease.ashx  [I,L,QSA]
+RewriteRule ^/upload/prerelease/.*$ /feeds/prerelease.ashx  [I,L,QSA]
+
 # RedirectRule ^/upload/$ /feeds/Current.ashx [I,L,QSA]
 RewriteRule ^/upload.*$ /feeds/Current.ashx [I,L,QSA]
 
@@ -56,8 +59,11 @@ RewriteRule ^/current/$ /repository/current.xml [I]
 RewriteRule ^/archive$ /repository/archive.xml [I]
 RewriteRule ^/archive/$ /repository/archive.xml [I]
 
-RewriteRule ^/unstable$ /repository/unstable.xml [I]
-RewriteRule ^/unstable/$ /repository/unstable.xml [I]
+RewriteRule ^/unstable$ /repository/prerelease.xml [I]
+RewriteRule ^/unstable/$ /repository/prerelease.xml [I]
+
+RewriteRule ^/prerelease$ /repository/prerelease.xml [I]
+RewriteRule ^/prerelease/$ /repository/prerelease.xml [I]
 
 #canonical locations for our packages. 
 RewriteRule ^/install$ /repository/coapp.msi [I]
